# Apollo

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  user-journeys.html  v2-proof-log.jsonl
.codex/agents/: carousel-art-director.toml  carousel-composer.toml  carousel-recovery.toml  carousel-renderer-v2.toml  carousel-renderer.toml  carousel-reviewer.toml  carousel-writer-v2.toml  carousel-writer.toml  doc-curator.toml  explorer.toml  implementer.toml  reviewer.toml  spec-griller.toml  spec-planner.toml  test-runner.toml
assets/database/: carousel-shell.html  carousel-v2-shell.html  theme.css
docs/: AGENT_ROLES.md  ARCHITECTURE.md  CONTEXT.md  DOCS_POLICY.md  PRODUCT.md  WORKFLOWS.md
docs/milestones/: 0001-adaptive-carousel-content.md  0001-agent-authored-deck-html.md  (+40 more)
runs/: deck.html
scripts/: check-deck.py  compose-carousel.mjs  create-carousel-run-v2.mjs  create-carousel-run.mjs  export-carousel-v2.mjs  export-carousel.mjs  measure-carousel.mjs  populate-carousel-v2.mjs  populate-carousel.mjs  proof-v2.mjs  proof.mjs  recovery-memory.mjs  validate-carousel-content-v2.mjs  validate-carousel-content.mjs  validate-carousel-layout.mjs  validate-carousel-review.mjs  validate-text.mjs
test/: recovery-memory.test.mjs  render-carousel-v2.test.mjs  render-carousel.test.mjs  validate-carousel-content-v2.test.mjs  validate-carousel-content.test.mjs  validate-carousel-review.test.mjs
tests/: test_check_deck.py  test_concept_ideation.py  test_script_agent.py  test_timeline_agent.py  test_topic_to_script_package.py
(+104 files in other folders)
