[project]
name = "topic-to-script-package"
version = "0.1.0"
description = "Local topic-to-script-package CLI for the clip production workspace."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
]

[project.scripts]
topic-to-script-package = "topic_to_script_package.cli:main"
apollo = "apollo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/apollo", "src/concept_ideation", "src/script_agent", "src/timeline_agent"]
